compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_record_constructor_invalid_field_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nrecord User {\n    name: \"Test User\",\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:5
  │
3 │     name: "Test User",
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

type User {
  User(
    name: Type,
  )
}
