compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_record_constructor_without_field_type.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1044
expression: "\npub opaque record User {\n    name\n}\n"
---
----- SOURCE CODE

pub opaque record User {
    name
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:5
  │
3 │     name
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

pub opaque type User {
  User(
    name: Type,
  )
}
