compiler-core/src/parse/snapshots/rakun_core__parse__tests__wrong_record_access_pattern.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 909
expression: "\npub fn main() {\n  case wibble {\n    wibble.thing -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case wibble {
    wibble.thing -> 1
  }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:4:5
  │
4 │     wibble.thing -> 1
  │     ^^^^^^^^^^^^ Invalid pattern

I'm expecting a pattern here
Hint: A pattern can be a constructor name, a literal value
or a variable to bind a value to, etc.
See: https://tour.rakun.run/flow-control/case-expressions/
